# Spark-Store

./: .gitignore  CMakeLists.txt  Jenkinsfile  Logo-Spark.png.bak  README.en.md  README.md  big_image.cpp  build.sh  deepin-community-store.pro  downloadlist.cpp  downloadlist.h  downloadlist.ui  icons.qrc  image_show.cpp  image_show.h  lang_Chinses.ts  lang_English.ts  main.cpp  mainwindow.cpp  mainwindow.h  outputwindow.cpp  outputwindow.h  outputwindow.ui  progress_load.cpp  progress_load.h  progressload.cpp  progressload.h  server.list  spark-store-project.pro  spark-store.pro  ssinstall  urls.h  widget.cpp  widget.h  widget.ui  workerthreads.cpp
.gitee/: Dockerfile  callback.py
assets/: icons.qrc
bui/: Makefile  ui_widget.h
cmake/: FindGdk3.cmake  FindGlib.cmake  FindLibNotify.cmake  git_watcher.cmake
debian/DEBIAN/: control  postinst  postrm
debian/etc/apt/preferences.d/: sparkstore
debian/tmp/spark-store-install/: feedback.sh
debian/usr/share/applications/: spark-store.desktop
debian/usr/share/spark-store/translations/: spark-store_fr.qm  spark-store_zh_CN.qm
gui/: qtxcb.cpp  spkabout.cpp  spkcategoryselector.cpp  spkdialog.cpp  spkloading.cpp  spkmainwindow.cpp  spkmsgbox.cpp  spkpageqsstest.cpp  spkpopup.cpp  spksidebartree.cpp  spktitlebar.cpp  spkui_general.cpp  spkwindow.cpp
gui/qt/: qxcbatom.cpp
inc/: deepinplatform.h  gitver.h  qtxcb.h  qxcbatom.h  spkabout.h  spkconfig.h  spkdialog.h  spkjsonapiconsumer.h  spkloading.h  spklogging.h  spkmainwindow.h  spkmsgbox.h  spkpageqsstest.h  spkpopup.h  spksidebartree.h  spkstore.h  spktitlebar.h  spkui_general.h  spkuimsg.h  spkutils.h  spkwindow.h
inc/dtk/: dguiapplicationhelper.h  dtkcore_config.h
inc/telemetry/: collectid.h
inc/xcb/: xcbint.h
plugin/dtkplugin/: CMakeLists.txt  spkdtkplugin.cpp  spkdtkplugin.h  spkdtkplugin_impl.h
resource/: default_config  lipsum.txt  resource.qrc
resource/stylesheets/: mainwindow.css  mainwindow_dark.css
src/: appitem.cpp  appitem.h  appitem.ui  big_image.cpp  big_image.h  downloadlist.cpp  downloadlist.h  downloadworker.cpp  downloadworker.h  flowlayout.cpp  gitver.cpp.in  image_show.cpp  image_show.h  main.cpp  progressload.cpp  progressload.h  spark-store.pro  spklogging.cpp  spkstore.cpp  spkuimsg.cpp  spkutils.cpp  widget.cpp  widget.h  widget.ui  workerthreads.cpp  workerthreads.h
src/async/: spkjsonapiconsumer.cpp
src/telemetry/: collectid.cpp
trans/: lang_Chinses.ts  lang_English.qm  lang_English.ts  spark-store_en.qm  spark-store_en.ts  spark-store_fr.qm  spark-store_fr.ts  spark-store_zh_CN.qm  spark-store_zh_CN.ts
translations/: spark-store_en.qm  spark-store_en.ts  spark-store_fr.ts  spark-store_zh_CN.qm  spark-store_zh_CN.ts
